[workspace]
resolver = "2"
members = ["riffle-server", "riffle-ctl"]

[workspace.dependencies]
tokio = { version = "1.28.2", features = ["full"] }
clap = { version = "4.5.31", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
url = "2.4.0"
async-trait = "0.1.68"
tempfile = "3.7.0"
futures = "0.3"
poem = { version = "1.3.56", features = ["rustls", "test", "anyhow"] }
bytesize = { version = "1.2.0", features = ["serde"] }

[profile.release]
debug = 1
