[workspace]
resolver = "2"
members = ["riffle-server", "riffle-ctl"]

[workspace.dependencies]
tokio = { version = "1.45.0", features = ["full"] }
clap = { version = "4.5.31", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
url = "2.4.0"
async-trait = "0.1.68"
tempfile = "3.7.0"
futures = "0.3"
poem = { version = "1.3.56", features = ["rustls", "test", "anyhow"] }
bytesize = { version = "1.2.0", features = ["serde"] }
allocator-api2 = "0.2"
async-channel = "1.8.0"
await-tree = "0.3.0"
awaitility = "0.3.1"
backtrace = "0.3.48"
bytes = "1.10.1"
cap = "0.1.2"
cc = "1.2.13"
chrono = "0.4.38"
core_affinity = "0.8.1"
crc32fast = "1.3.2"
criterion = "0.5.1"
croaring = "2.2.0"
crossbeam = "0.8.2"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8.16"
csv = "1.3.1"
datafusion = "46.0.1"
env_logger = "0.10.0"
fastrace = "0.6"
fastrace-jaeger = "0.6"
fs2 = "0.4.3"
fxhash = "0.2.1"
governor = "0.10.0"
hashlink = "0.9.1"
hdfs-native = "0.11.2"
hdrhistogram = "7.5.4"
hdrs = { git = "https://github.com/zuston/hdrs", rev = "882ccbbdc4a4c6f850009b7973dc31faf346f87b" }
hyper = "0.14"
indicatif = "0.17.11"
jemalloc_pprof = "0.7.0"
libc = "0.2.169"
log = "0.4.17"
logforth = "0.26.1"
mimalloc = "0.1.39"
nonzero_ext = "0.3.0"
num_enum = "0.7.0"
once_cell = "1.18.0"
parking_lot = "0.12.3"
pin-project-lite = "0.2.8"
pprof = "0.14.0"
prometheus = "0.13"
prost = "0.12.1"
prost-build = "0.12.1"
rand = "0.8.5"
reqwest = "0.12.15"
riffle-server = { path = "riffle-server" }
serde_json = "1.0.132"
signal-hook = "0.3.17"
sled = "0.34.7"
socket2 = "0.4"
spin = "0.9.8"
strum = "0.20.0"
strum_macros = "0.20.0"
tempdir = "0.3.7"
thiserror = "1"
tikv-jemalloc-ctl = "0.6.0"
tikv-jemalloc-sys = "0.6.0"
tikv-jemallocator = "0.6.0"
tokio-console = "0.1.8"
tokio-rustls = "0.22"
tokio-stream = "0.1"
tokio-util = "0.6"
toml = "0.7.4"
tonic = { git = "https://github.com/zuston/tonic.git", branch = "zero_copy_bytes" }
tonic-build = { git = "https://github.com/zuston/tonic.git", branch = "zero_copy_bytes" }
tower = "0.4"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
dashmap = "5.4.0"
pgwire = "0.28.0"
datafusion-postgres = { git = "https://github.com/zuston/datafusion-postgres.git", branch = "extended" }
sqlparser = "0.56.0"

[profile.release]
debug = 1
