# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "riffle-coordinator"
version = "0.20.0"
edition = "2021"

[[bin]]
name = "riffle-coordinator"
path = "src/main.rs"

[features]
default = ["logforth"]
logforth = ["dep:logforth"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
parking_lot = { workspace = true }
rand = { workspace = true }
toml = { workspace = true }
poem = { workspace = true, features = ["rustls", "test", "anyhow"] }
logforth = { workspace = true, features = ["append-rolling-file"], optional = true }

# Reuse riffle-server's gRPC generated code
riffle-server = { path = "../riffle-server" }

uuid = { version = "1.7", features = ["v4"] }
