[package]
name = "riffle-ctl"
version = "0.10.0"
edition = "2021"

[[bin]]
name = "riffle-ctl"
path = "src/main.rs"

[dependencies]
riffle-server = { path = "../riffle-server" }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
serde_json = "1.0.132"
datafusion = "46.0.1"
csv = "1.3.1"
reqwest = { version = "0.12.15", features = ["json"] }
indicatif = "0.17.11"
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
url = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }
bytesize = { workspace = true, features = ["serde"] }

bytes = "1.10.1"
dashmap = "6.1.0"

strum = "0.20.0"
strum_macros = "0.20.0"

[dev-dependencies]
poem = { workspace = true, features = ["rustls", "test", "anyhow"] }
