[package]
name = "riffle-ctl"
version = "0.25.0"
edition = "2021"

[[bin]]
name = "riffle-ctl"
path = "src/main.rs"

[features]
hdrs_append = ["riffle-server/hdrs"]

[dependencies]
# Keep ctl independent from hdrs/libhdfs so it does not require libjvm.so at runtime.
riffle-server = { workspace = true, default-features = false, features = ["logforth", "hdfs"] }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
datafusion = { workspace = true }
csv = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
console = "0.15.11"
indicatif = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
url = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }
bytesize = { workspace = true, features = ["serde"] }

bytes = { workspace = true }
dashmap = { workspace = true }

strum = { workspace = true }
strum_macros = { workspace = true }

sqlparser = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
logforth = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
poem = { workspace = true, features = ["rustls", "test", "anyhow"] }
